Issue #467: Form fieldsets not showing titles in Safari browser.

--- a/deb/openmediavault/var/www/openmediavault/css/theme-triton.scss
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-triton.scss
@@ -46,6 +46,11 @@ body > .x-mask {
 .x-fieldset-header-default > .x-fieldset-header-text {
 	color: $omv-color-more-darker;
 }
+/* Fix Safari browser issue */
+/* https://github.com/openmediavault/openmediavault/issues/467 */
+.x-fieldset-header-default > .x-fieldset-header-text {
+	position: unset;
+}
 /******************************************************************************/
 /* Trigger field */
 .x-form-password-trigger:before {
